--- a/index.html
+++ b/index.html
@@ -62,18 +62,17 @@
 		}
 		
         /* Estilo general del botón */
-        .btn-bajar {
+      /*  .btn-bajar {
             position: fixed;
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
-		    background: none; /* Quita el fondo del botón */
+		    background: none; /* Quita el fondo del botón 
 			background: linear-gradient(to right, #fff, #fff);
             color: red;
             border: none;
             padding: 15px;
             border-radius: 50%;
-            cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -81,11 +80,11 @@
             text-shadow: 0 0px 8px rgba(0, 0, 0, 0.2);
             animation: bounce 1.5s infinite;
             transition: opacity 0.3s ease;
-			opacity: 1; /* 50% de opacidad */
+			opacity: 1; /* 50% de opacidad 
 			width: 75px;
 			height: 75px;
-        }
-
+		}
+		*/
         /* Animación de rebote */
       /*  @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
